<resources>
    <string name="app_name">SchoolQuiz</string>
    <string name="welcome">Welcome for your Quiz</string>
    <string name="enter_name">Enter your Name</string>
    <string name="name_hint">Full Name</string>
    <string name="select_num">Select Number of Questions</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>
    <string name="twenty_five">25</string>
    <string name="thirty">30</string>
    <string name="forty">40</string>
    <string name="fifty">50</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="selet_diff">Select Difficulty</string>
    <string name="select_type">Select Question Type</string>
    <string name="multiple">Multiple Choice Questions</string>
    <string name="true_or_false">True / False Questions</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="splash_image">Splash Image</string>
    <string name="your_cat">Your Category</string>
    <string name="submit_button">Submit</string>
    <string name="next_button">Next</string>
    <string name="gk">General Knowledge</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="marks_scored">Marks Scored</string>
    <string name="result">Result</string>
    <string name="time_taken">Time taken(mins)</string>
    <string name="refresh">Refresh</string>


</resources>